
CHANGES
==============

-> UP
-----------

    - bump ipython to 0.10

0.91
-------

    - add support for installing Quills, the plone Blog suite.
    - fix plone3 default buildout code
    - switch recipe names to new minitage.recipe recipes
    - plone3 template refactoring
    - atreal.patchfss fix
    - paster quiet option handled correctly
    - distribute instead of setuptools
    - cheetah requirement fix because of ugly zopeskel version pinning
    - add facultystaff to plone3
    - make plone3 paster customizable via configuration files (xml)
    - maintenance on the postgresql instance (8.4.1)
    - let zeo part be there, everytime.
    - fix "instance.env" deactivate function
    - minitage.plone3 autoselect scripts as well
    - add five.grok support to minitage.plone3
    - add MYSQL50 support to mysql instance
    - add env file generation to minitage.plone3 project
    - add ipython patch to go out the pdb hack

1.3.51
-------

    - postgresql maintenance and doc/UI improvment
    - plone3 refactoring

        - better separation between buildout logic and semantic
        - fix buildout part ordering

    - add --reload option for the pasteinitd profile
    - pgsql 8.4 support
    - zope3 python version upgraded
    - add openldap profile
    - add mysql profile
    - fix on postgresql template for database initialization
    - plone3 fix for offline run
    - add running_user/dbuser distinction in the postgresql profile.
    - move some scripts for global coherence
    - mysqld init script portable
    - db_user is also owner of the created database
    - profils -> instances
    - openldap got better arguements for its wrappers. Also, now it uses
      SIMPLE authentication for connection to the slapd server.
    - add SSL certificate generators
    - fix plone.reload version for compatibility with plone3
    - wrong dependency on pyopenssl fixed and moved inside .extras