@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
-#echo 'source %s/share/minitage/minitage.env\n' % $sys
+#echo '. %s/share/minitage/minitage.env\n' % $sys
 export MYSQL_HOME=$sys/var/data/mysql/$db_name
 export MYSQL_TCP_PORT=$db_port
 export USER=$db_user
